<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

<!--        入力確定領域-->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:scrollbarSize="8dp"
                android:isScrollContainer="false">

                <LinearLayout
                    android:id="@+id/decided_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                </LinearLayout>

            </ScrollView>

        </LinearLayout>

<!--        結果領域-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/current_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:background="@color/gray"
                android:autoSizeTextType="uniform">
            </TextView>

        </LinearLayout>

<!--        入力領域-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

<!--            1段目-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/oneStep"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/twoStep">

                <Button
                    android:id="@+id/seven"
                    android:text="@string/seven"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/eight">
                </Button>

                <Button
                    android:id="@+id/eight"
                    android:text="@string/eight"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/seven"
                    app:layout_constraintEnd_toStartOf="@id/nine">
                </Button>

                <Button
                    android:id="@+id/nine"
                    android:text="@string/nine"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/eight"
                    app:layout_constraintEnd_toEndOf="parent">
                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>

<!--            2段目-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/twoStep"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/oneStep"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/threeStep">

                <Button
                    android:id="@+id/four"
                    android:text="@string/four"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/five">
                </Button>

                <Button
                    android:id="@+id/five"
                    android:text="@string/five"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/four"
                    app:layout_constraintEnd_toStartOf="@id/six">
                </Button>

                <Button
                    android:id="@+id/six"
                    android:text="@string/six"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/five"
                    app:layout_constraintEnd_toEndOf="parent">
                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>

<!--            3段目-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/threeStep"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/twoStep"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fourStep">

                <Button
                    android:id="@+id/one"
                    android:text="@string/one"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/two">
                </Button>

                <Button
                    android:id="@+id/two"
                    android:text="@string/two"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/one"
                    app:layout_constraintEnd_toStartOf="@id/three">
                </Button>

                <Button
                    android:id="@+id/three"
                    android:text="@string/three"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/two"
                    app:layout_constraintEnd_toEndOf="parent">
                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>

<!--            4段目-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fourStep"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/threeStep"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/clear"
                    android:text="@string/clear"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/zero">
                </Button>

                <Button
                    android:id="@+id/zero"
                    android:text="@string/zero"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/clear"
                    app:layout_constraintEnd_toStartOf="@id/enter">
                </Button>

                <Button
                    android:id="@+id/enter"
                    android:text="@string/enter"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/zero"
                    app:layout_constraintEnd_toStartOf="@id/calc">
                </Button>

                <Button
                    android:id="@+id/calc"
                    android:text="@string/calc"
                    style="@style/inputKey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/enter"
                    app:layout_constraintEnd_toEndOf="parent">
                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>